--- a/pom.xml
+++ b/pom.xml
@@ -8,13 +8,48 @@
 		<artifactId>archetypes-parent</artifactId>
 		<version>3.0.0-alpha6-SNAPSHOT</version>
 	</parent>
+	
+	<properties>
+		<bundle.symbolicName>org.cytoscape.kegg.kgmlreader</bundle.symbolicName>
+		<bundle.namespace>org.cytoscape.kegg</bundle.namespace>
+	</properties>
 
-	<groupId>org.cytoscape.archetypes</groupId>
+	<groupId>org.cytoscape.kegg</groupId>
 	<artifactId>kgmlreader</artifactId>
-	<packaging>maven-archetype</packaging>
-	<name>KGMLReader</name>
+
+	<name>${bundle.symbolicName} [${bundle.namespace}]</name>
+
+	<packaging>bundle</packaging>
+
+	<repositories>
+		<!-- bootstrap for cytoscape dependencies, namely the parent POM snapshots -->
+		<repository>
+			<id>cytoscape_snapshots</id>
+			<snapshots>
+				<enabled>true</enabled>
+			</snapshots>
+			<releases>
+				<enabled>false</enabled>
+			</releases>
+			<name>Cytoscape Snapshots</name>
+			<url>http://cytoscape.wodaklab.org/nexus/content/repositories/snapshots/</url>
+		</repository>
+		<!-- bootstrap for cytoscape dependencies, namely the parent POM releases -->
+		<repository>
+			<id>cytoscape_releases</id>
+			<snapshots>
+				<enabled>false</enabled>
+			</snapshots>
+			<releases>
+				<enabled>true</enabled>
+			</releases>
+			<name>Cytoscape Releases</name>
+			<url>http://cytoscape.wodaklab.org/nexus/content/repositories/releases/</url>
+		</repository>
+	</repositories>
 
 	<build>
+		
 		<plugins>
 			<!-- The point of this code is to use the archetype we just created and 
 				use it to generate a project and then build the project, which will test 
@@ -32,7 +67,19 @@
 				</configuration> </plugin> <plugin> <artifactId>maven-clean-plugin</artifactId> 
 				<version>2.4.1</version> <executions> <execution> <id>auto-clean</id> <phase>initialize</phase> 
 				<goals> <goal>clean</goal> </goals> </execution> </executions> </plugin> -->
-
+			<plugin>
+				<groupId>org.apache.felix</groupId>
+				<artifactId>maven-bundle-plugin</artifactId>
+				<version>${maven-bundle-plugin.version}</version>
+				<extensions>true</extensions>
+				<configuration>
+					<instructions>
+						<Bundle-SymbolicName>${bundle.symbolicName}</Bundle-SymbolicName>
+						<Bundle-Version>${project.version}</Bundle-Version>
+						<_include>-osgi.bnd</_include>
+					</instructions>
+				</configuration>
+			</plugin>
 			<plugin>
 				<groupId>org.jvnet.jaxb2.maven2</groupId>
 				<artifactId>maven-jaxb2-plugin</artifactId>
