--- a/pom.xml
+++ b/pom.xml
@@ -1,11 +1,9 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 
-	<modelVersion>4.0.0</modelVersion>
-
 	<parent>
 		<groupId>org.cytoscape</groupId>
-		<artifactId>archetypes-parent</artifactId>
+		<artifactId>impl-parent</artifactId>
 		<version>3.0.0-alpha6-SNAPSHOT</version>
 	</parent>
 	
@@ -14,6 +12,7 @@
 		<bundle.namespace>org.cytoscape.kegg</bundle.namespace>
 	</properties>
 
+	<modelVersion>4.0.0</modelVersion>
 	<groupId>org.cytoscape.kegg</groupId>
 	<artifactId>kgmlreader</artifactId>
 
@@ -49,7 +48,6 @@
 	</repositories>
 
 	<build>
-		
 		<plugins>
 			<!-- The point of this code is to use the archetype we just created and 
 				use it to generate a project and then build the project, which will test 
@@ -103,7 +101,46 @@
 					</execution>
 				</executions>
 			</plugin>
-
 		</plugins>
 	</build>
+	<dependencies>
+		<dependency>
+			<groupId>org.cytoscape</groupId>
+			<artifactId>di-util-api</artifactId>
+		</dependency>	
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-core</artifactId>
+			<version>${spring.version}</version>
+			<scope>provided</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.cytoscape</groupId>
+			<artifactId>equations-api</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.cytoscape</groupId>
+			<artifactId>io-api</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.cytoscape</groupId>
+			<artifactId>presentation-api</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.cytoscape</groupId>
+			<artifactId>layout-api</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.cytoscape</groupId>
+			<artifactId>model-api</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.cytoscape</groupId>
+			<artifactId>core-task-api</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.cytoscape</groupId>
+			<artifactId>property-api</artifactId>
+		</dependency>
+	</dependencies>
 </project>
